objects/sf_devops__Work_Item_Promote__c.object
<CustomObject>
    <description>Joins a work item to a pipeline stage to represent a promotion.</description>
    <fields>
        <fullName>sf_devops__Completion_Date__c</fullName>
        <description>This field is deprecated and should not be referenced</description>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Deployment_Id__c</fullName>
        <description>This field is deprecated and should not be referenced</description>
        <label>Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Deployment_Result__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The results of our deployment into the target stage</description>
        <label>Deployment Result</label>
        <referenceTo>sf_devops__Deployment_Result__c</referenceTo>
        <relationshipLabel>Work Item Promotes</relationshipLabel>
        <relationshipName>Work_Item_Promotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Merge_Result__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Merge Result</label>
        <referenceTo>sf_devops__Merge_Result__c</referenceTo>
        <relationshipLabel>Work Item Promotes</relationshipLabel>
        <relationshipName>Work_Item_Promotes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Pipeline_Stage__c</fullName>
        <description>The stage of this promotion</description>
        <label>Pipeline Stage</label>
        <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
        <relationshipLabel>Work Item Promotes</relationshipLabel>
        <relationshipName>Work_Item_Promotes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Rebase_Limit__c</fullName>
        <description>Number of retries left to rebase the work item associated with this promote.</description>
        <label>Rebase Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_devops__Rebase_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The status of the post promote rebase operation.</description>
        <label>Rebase Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Work Item Promote Rebases</relationshipLabel>
        <relationshipName>Work_Item_Promote_Rebases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Reference__c</fullName>
        <description>This field is deprecated and should not be referenced</description>
        <label>Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The status of the promote operation.</description>
        <label>Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Work Item Promotes</relationshipLabel>
        <relationshipName>Work_Item_Promotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item__c</fullName>
        <description>The work item that was promoted</description>
        <label>Work Item</label>
        <referenceTo>sf_devops__Work_Item__c</referenceTo>
        <relationshipLabel>Work Item Promotes</relationshipLabel>
        <relationshipName>Work_Item_Promotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Item Promote</label>
    <nameField>
        <displayFormat>WIP-{000000}</displayFormat>
        <label>Work Item Promote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Item Promotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__No_Promotion_to_Inactive_Pipeline</fullName>
        <active>true</active>
        <description>You cannot promote a work item to a stage of an inactive pipeline</description>
        <errorConditionFormula>AND (
      ISNEW(),
   NOT( sf_devops__Pipeline_Stage__r.sf_devops__Pipeline__r.sf_devops__Activated__c )
)</errorConditionFormula>
        <errorMessage>You cannot promote a Work_Item to an inactive Pipeline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promoted_And_Installed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
      ISNEW(),
 NOT (ISBLANK(sf_devops__Work_Item__r.sf_devops__Change_Bundle__c))
)</errorConditionFormula>
        <errorMessage>A Work_Item that is a member of a Change_Bundle can not be promoted into a Pipeline_Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promoted_To_Versioned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
      ISNEW(),
      sf_devops__Pipeline_Stage__r.sf_devops__Versioned__c 
)</errorConditionFormula>
        <errorMessage>A Work_Item cannot be promoted into a versioned Pipeline_Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promoted_Without_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISNEW(),
   NOT (sf_devops__Work_Item__r.sf_devops__Development_Approved__c) 
 
 )</errorConditionFormula>
        <errorMessage>A WorkItem cannot be promoted if it is not Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promoted_Wrong_Project</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISNEW(),
    sf_devops__Pipeline_Stage__r.sf_devops__Pipeline__r.sf_devops__Project__c  &lt;&gt;  sf_devops__Work_Item__r.sf_devops__Project__c 

)</errorConditionFormula>
        <errorMessage>A WorkItem can only be promoted to a stage within the same Project.</errorMessage>
    </validationRules>
</CustomObject>